# lab04-ROS

./: CMakeLists.txt  README.md  package.xml
launch/: move_between_objects.launch  wall_follower.launch
msg/: RobotStatus.msg
scripts/: camera_node.py  logger.py  logging_control.py  move_between_objects.py  status_publisher.py  utils.py  wall_follower.py
worlds/: two_objects.world
