<?xml version="1.0"?>
<package format="2">
  <name>lab4</name>
  <version>0.0.1</version>
  <description>Lab 4 - ROS Robot Architecture</description>
  <maintainer email="todo@todo.com">lab4</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>python3-rospkg</exec_depend>
</package>
